[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "link_reaper"
version = "0.7.5"
dependencies = [
    "requests",
    "Click"
]
authors = [
  { name="Ibrahim", email="sharktrexer@gmail.com" },
]
description = "Removes dead & duplicate links from markdown files and updates redirects."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Entry Point
[project.scripts]
# custom-name = package.module:cli_function
link-reaper = "link_reaper.reaper:link_reaper"