[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "the_link_reaper"
version = "0.8.3"
dependencies = [
    "requests",
    "Click"
]
authors = [
  { name="Ibrahim S", email="ibrahimisprogramming@gmail.com" },
]
description = "Removes dead & duplicate links from markdown files and updates redirects."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9.6"
classifiers = [
  "Development Status :: 4 - Beta",

  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
keywords = ["markdown", "links", "list cleaning", "cli", "urls"]

[project.urls]
Repository = "https://github.com/sharktrexer/link-reaper"
Issues = "https://github.com/sharktrexer/link-reaper/issues"

# Entry Point
[project.scripts]
# custom-name = package.module:cli_function
link-reaper = "link_reaper.reaper:link_reaper"